--- a/_site.yml
+++ b/_site.yml
@@ -9,5 +9,7 @@ navbar:
       href: mailto:<yt2604@cumc.columbia.edu>
     - icon: fa-github fa-lg
       href: https://github.com/tuyuqi
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/yuqi-tu-097791104/
 output:
   html_document
